--- a/src/Contactpage/Contact.css
+++ b/src/Contactpage/Contact.css
@@ -9,9 +9,9 @@
     margin-top: 20px;
     text-align: center;
     text-decoration: underline;
-     line-height: 2em;
-     text-underline-position: under;
-    color: blue;
+    line-height: 2em;
+    text-underline-position: under;
+    color: #407BFF;
 }
 
 .contact-message {
@@ -25,6 +25,10 @@
 
 }
 
+#button {
+    background-color: #407BFF;
+}
+
 .form {
     margin-top: 20%;
     margin-left: 5%;
@@ -34,9 +38,7 @@
     grid-column-end: 3;
 }
 
-.gap-2 {
-
-}
+.gap-2 {}
 
 .icon-info-map {
     margin-top: 30%;
