--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -1,32 +1,66 @@
 .footer {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 20px;
-    font-size: small;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  .footer-info  {
-    display: flex;
-    justify-content: center;
-  }
-  
-  .footer-info-column {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-    width: 20%;
-  }
-  
-  .footer-item {
-    margin-bottom: 10px;
-    text-align: start;
-  }
-  
-  .footer-seperator {
-    flex-grow: 1;
-    border: none;
-    height: 1px;
-    background-color: black;
-    width: 100%;
-  }
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+  font-size: small;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.footer-info  {
+  display: flex;
+  justify-content: center;
+}
+
+.footer-info-column {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+}
+
+.footer-item {
+  text-align: start;
+}
+
+.footer-seperator {
+  flex-grow: 1;
+  border: none;
+  height: 1px;
+  background-color: black;
+  width: 100%;
+}
+
+.footer-image {
+  width: 100px;
+  height: 100px;
+}
+
+.social-icons {
+  text-align: right;
+}
+
+.bottom-bar {
+  display: flex;
+}
+
+.social-icon-label {
+  display: flex;
+  margin-left: auto;
+  float: right;
+}
+
+.copyright {
+  display: flex;
+  float: left;
+}
+
+.footer-links li {
+  list-style-type: none;
+}
+
+.footer-links a {
+  color: black;
+  text-decoration: none;
+
+}
