--- a/src/Home/StateLanding.css
+++ b/src/Home/StateLanding.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Public+Sans:wght@200&display=swap');
+
+
 .state-container {
     display: flex;
     flex-direction: column;
@@ -12,20 +15,38 @@
 }
 
 #state-header-three {
-    color: rgb(0, 71, 177);
+    color: #3C64B1;
     font-size: 20px;
 }
 
+#state-paragraph {
+    font-family: 'Public Sans', sans-serif;
+    color: #737B7D;
+}
+
 #state-button {
-    border: 2px solid rgb(0, 71, 177);
+    border: 2px solid #3C64B1;
     border-radius: 1px;
     outline: none;
     background-color: transparent;
     height: 5vh;
     width: 8vw;
+    transition: all 0.6s ease;
+}
+
+#state-button:hover {
+    background-color: #3C64B1;
+    color: white;
 }
 
 .image {
-    height: 400px;
+    height: 500px;
     width: 500px;
+}
+
+#state-header-one {
+    font-family: 'Merriweather', Arial;
+    font-weight: bold;
+    font-size: 50px;
+    color: #373F41;
 }
