--- a/src/FederalPage/FederalData.css
+++ b/src/FederalPage/FederalData.css
@@ -27,10 +27,10 @@
 
 
 .recipient-container {
-    max-height: 40px;
+    height: 50vh;
     width: 80vw;
     padding: 0;
-    /* overflow: hidden; */
+    overflow: hidden;
     transition: all .3s ease;
 }
 
