--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -38,6 +38,7 @@
 
 .social-icons {
   text-align: right;
+  padding-right: 20px;
 }
 
 .bottom-bar {
@@ -48,6 +49,7 @@
   display: flex;
   margin-left: auto;
   float: right;
+  padding-right: 20px;
 }
 
 .copyright {
@@ -57,6 +59,8 @@
 
 .footer-links li {
   list-style-type: none;
+  text-align: right;
+  padding-right: 20px;
 }
 
 .footer-links a {
