--- a/src/Home/PrimaryLanding.css
+++ b/src/Home/PrimaryLanding.css
@@ -1,72 +1,67 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Public+Sans:wght@200&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Merriweather&family=Public+Sans:wght@200&display=swap");
 
 .container {
-    display: flex;
-    gap: 50px;
-    align-items: center;
-    justify-content: center;
-    /* flex-wrap: wrap; */
+  display: flex;
+  gap: 50px;
+  align-items: center;
+  justify-content: center;
+  /* flex-wrap: wrap; */
 }
 
 #primary-header-one {
-    font-family: 'Merriweather', Arial;
-    font-weight: bold;
-    font-size: 50px;
-    color: #373F41;
+  font-family: "Merriweather", Arial;
+  font-weight: bold;
+  font-size: 50px;
+  color: #373f41;
 }
 
 #primary-header-three {
-    color: #3C64B1;
+  color: #3c64b1;
 }
 
 #primary-paragraph {
-    font-family: 'Public Sans', sans-serif;
-    color: #737B7D;
+  font-family: "Public Sans", sans-serif;
+  color: #737b7d;
 }
 
 #primary-button {
-    position: relative;
-    display: block;
-    border: 2px solid #3C64B1;
-    border-radius: 1px;
-    outline: none;
-    height: 5vh;
-    width: 8vw;
-    padding: 0;
-    overflow: hidden;
-    transition: 1s all ease;
+  position: relative;
+  display: block;
+  border: 2px solid #3c64b1;
+  border-radius: 1px;
+  outline: none;
+  height: 5vh;
+  width: 8vw;
+  padding: 0;
+  overflow: hidden;
+  transition: 1s all ease;
 }
 
 #primary-button::before {
-    background: #3C64B1;
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    z-index: -1;
-    transition: all 0.6s ease;
-  }
-  
+  background: #3c64b1;
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  transition: all 0.6s ease;
+}
 
-  #primary-button:hover {
-      background-color: #3C64B1;
-      color: white;
-  }
-  
+#primary-button:hover {
+  background-color: #3c64b1;
+  color: white;
+}
 
-  #link {
-      text-decoration: none;
-  }
+#link {
+  text-decoration: none;
+}
 
 #image {
-    height: 700px;
-    width: 700px;
+  height: 700px;
+  width: 700px;
 }
 
 .content {
-    padding-top: 40px;
+  padding-top: 40px;
 }
-
