updated StateData.js and css

--- a/src/Contactpage/Contact.css
+++ b/src/Contactpage/Contact.css
@@ -1,4 +1,4 @@
-/* .contact-page {
+.contact-page {
     border: 2px solid rgb(226, 219, 219);
     box-shadow: 5px 3px 5px 3px lightgrey;
     margin: 10%;
@@ -43,4 +43,4 @@
 .icon-info-map {
     margin-top: 30%;
     line-height: 2em;
-} */
+}
