--- a/src/FederalPage/FederalData.css
+++ b/src/FederalPage/FederalData.css
@@ -26,11 +26,11 @@
 }
 
 .recipient-container {
-  height: 50vh;
   width: 80vw;
   padding: 0;
   overflow: hidden;
   transition: all 0.3s ease;
+  margin: 0;
 }
 
 #individual-recipient-container {
