--- a/src/FederalPage/FederalData.css
+++ b/src/FederalPage/FederalData.css
@@ -1,10 +1,10 @@
 * {
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
 .federal-container {
-  height: 100vh;
   margin: 0;
   padding: 0;
 }
@@ -23,21 +23,24 @@
 #federal-header {
   font-weight: normal;
   font-family: Helvetica, sans-serif;
+  
 }
 
 .recipient-container {
   width: 80vw;
-  padding: 0;
+  padding: 20px;
   overflow: hidden;
   transition: all 0.3s ease;
   margin: 0;
-}
-
-#individual-recipient-container {
-  background-color: whitesmoke;
   border-top: 1px solid rgb(179, 179, 179);
   border-bottom: 1px solid rgb(179, 179, 179);
 }
+
+/* #individual-recipient-container {
+  background-color: whitesmoke;
+  border-top: 1px solid rgb(179, 179, 179);
+  border-bottom: 1px solid rgb(179, 179, 179);
+} */
 
 /* .recipient-container {
     max-height: 250px;
@@ -47,17 +50,39 @@
 #header {
   display: flex;
   gap: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.spending-name-prime-award {
+    text-align: center;
+    font-weight: bold;
+    font-size: 3vh;
+    font-family: Helvetica, sans-serif;
 }
 
 #recipient-name-section {
   display: flex;
-  gap: 10px;
+  gap: 20px;
 }
 
-#federal-recipient-name-header {
-    margin-right: 10.2%;
-}
 
 #data-table-container {
   margin: auto;
+}
+
+
+.federal-filter-container {
+    background-color: #E7F5FF;
+}
+
+.right-arrow {
+    border: 1px solid gray;
+}
+
+.down-arrown {
+    border: 1px solid gray;
+}
+
+.table-header {
+    font-size: 3vh;
 }
