--- a/src/StatePage/StateData.css
+++ b/src/StatePage/StateData.css
@@ -6,16 +6,12 @@
 
 .state-recipient-container,
 .accordion-item {
-    /* background-color: whitesmoke; */
     border-top: 1px solid rgb(179, 179, 179);
     border-bottom: 1px solid rgb(179, 179, 179);
     transition: all 0.3s ease;
     width: 90vw;
     overflow: hidden;
     
-}
-
-#state-individual-recipient-container {
 }
 
 #state-recipient-name-section, .accordion-title {
@@ -45,22 +41,23 @@ ul{
 
 .state-header{
     background-color: #0A3B5B;
+    font-size: 25px;
     font-weight: normal;
     font-family: Helvetica,
     sans-serif;
     color: white;
 }
 
-
-.spa {
-    display: flex;
-    margin-left: 75%;
-}
-
 .state-data-container {
     display: grid;
     grid-template-columns: 30% 70%;
-    margin-left: 20%;
+    width: 50%;
+}
+
+#head-description {
+    display: flex;
+    margin-left: 75%;
+    font-size: 15px;
 }
 
 #state-data-table-container {
@@ -83,14 +80,34 @@ ul{
     font-size: 20px;
 }
 
-.filter-item {
+.state-filter-container {
+    display: flex;
+    width: 30%;
+}
+
+.filter-container {
     background-color: rgb(176, 222, 250);
-    width: 20%;
+    /* width: 40%; */
     height: 100vh;
 }
 
-.filter {
-    margin: 10%;
-    display: grid;
+.filter-head{
+    margin-left: 3%;
+}
+
+.filter-item {
+    transition: all 0.3s ease-in-out;
+    display: flex;
+    margin-left: 3%;
+    /* gap: 5px; */
+    
+}
+
+.filter-title {
     grid-template-columns: 1fr;
+}
+
+.filter {
+   
+    width: 10vw;
 }
