--- a/src/StatePage/StateData.css
+++ b/src/StatePage/StateData.css
@@ -4,7 +4,6 @@
     list-style: none;
 }
 
-.state-recipient-container,
 .accordion-item {
     border-top: 1px solid rgb(179, 179, 179);
     border-bottom: 1px solid rgb(179, 179, 179);
@@ -14,7 +13,7 @@
     
 }
 
-#state-recipient-name-section, .accordion-title {
+ .accordion-title {
     display: flex;
     gap: 20px;
     padding: 10px;
