added pagination: complete

--- a/src/FederalPage/FederalData.css
+++ b/src/FederalPage/FederalData.css
@@ -18,6 +18,7 @@
   background-color: #0a3b5b;
   color: white;
   padding: 10px;
+  font-size: 20px;
 }
 
 #federal-header {
@@ -85,4 +86,18 @@
 
 .table-header {
     font-size: 3vh;
+}
+
+.pagination-button {
+  outline: none;
+  border: 1px solid #0a3b5b;
+  color: #0a3b5b;
+  background-color: white;
+  margin: 5px;
+  width: 30px;
+  font-size: 20px;
+}
+
+.page-number-monitor {
+  text-align: center;
 }
