--- a/src/style/Nav.css
+++ b/src/style/Nav.css
@@ -1,88 +1,47 @@
-body{
-    margin: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
+*{
+  margin: 0;
+  padding: 0;
 }
 
-  .navbar {
-      height: 80px;
-      display: flex;
-      align-items: center;
-      align-content: center;
-    }
+.navbar {
+  display: flex;
+  margin-top: -50px;
+  margin-bottom: 0;
+  padding: 0;
+  height: 80px;
+  font-size: 2rem;
+}
 
-    /* .navbar h1{
-      margin-left: auto;
-      margin-right: auto;
-      color: #f5f5f5;
-      position: relative;
-      top: 10%;
-    } */
+.nav-container {
+  margin-top: 0;
+  margin-bottom: 50px;
+}
 
-    .menu-bars {
-      margin-left: 8rem;
-      font-size: 2rem;
-      background: none;
+.menu-bars {
+  display: flex;
+  margin-left: 5rem;
+}
 
-    }
+.a-nav {
+  transition: .4s;
+  text-decoration: none;
+  color: #000 !important;
+}
 
-    .nav-text {
-    
-    }
+.a-nav:hover {
+  color: rgb(18, 80, 194) !important;
+}
 
-    .nav-text a {
-      text-decoration: none;
-      font-size: 18px;
-      height: 100%;  
-      transition: .4s;
-    }
-
-    span {
-      margin-left: 16px;
-    }
-
-    .ul-nav{
-      position: absolute;
-      right: 8%;
-      top: 0.5%;
-      list-style-type: none;
-      display: flex;
-      justify-content: right;
-      text-align:center;
-      transition: all .4s ease-in-out;
-
-    }
+.ul-nav {
+  display: flex;
+  margin-right: 5%;
+  list-style-type: none;
+  transition: all .4s ease-in-out;
+  font-size: 15px;
+}
 
 
-     /* .ul-nav li &:hover {
-        text-decoration: underline;
-      } */
-
-      .ul-nav a {
-          /* text-decoration: none; */
-          font-size: 22px;
-      }
-
-
-
-      .ul-nav  a:link {
-      color: blanchedalmond;
-    }
-
-    .ul-nav  a:visited {
-      color: blanchedalmond;
-
-    }
-
-    .ul-nav  a:hover {
-      color: rgb(231, 184, 112);
-  }
-
-    
-
-    .ul-nav li{
-      padding: 20px;
-    }
-
-
+.ul-nav li {
+  padding: 5px;
+}
 
